--- a/SimpleExpr/Makefile
+++ b/SimpleExpr/Makefile
@@ -7,7 +7,7 @@ OBJS = grammar.o       \
 		otherContext.o \
 		TypeSystem.o   \
 
-LLVMCONFIG = llvm-config
+LLVMCONFIG = llvm-config-7
 CPPFLAGS = `$(LLVMCONFIG) --cppflags` -std=c++11
 LDFLAGS = `$(LLVMCONFIG) --ldflags` -lpthread -ldl -lz -lncurses -rdynamic -L/usr/local/lib -ljsoncpp
 LIBS = `$(LLVMCONFIG) --libs`
