clean debug cout info

--- a/src/Makefile
+++ b/src/Makefile
@@ -7,13 +7,13 @@ OBJS = grammar.o       \
 		typesystem.o   \
 		AST.o          \
 
-LLVMCONFIG = llvm-config-7
+LLVMCONFIG = llvm-config
 CPPFLAGS = `$(LLVMCONFIG) --cppflags` -std=c++11 -g
 LDFLAGS = `$(LLVMCONFIG) --ldflags` -lpthread -ldl -lz -lncurses -rdynamic -L/usr/local/lib 
 LIBS = `$(LLVMCONFIG) --libs`
 
 clean:
-	$(RM) -rf grammar.cpp grammar.hpp token.cpp main $(OBJS)
+	$(RM) -rf grammar.cpp grammar.hpp token.cpp main out test out.ll test.ll $(OBJS)
 
 main.cpp: AST.hpp context.h
 
@@ -38,4 +38,9 @@ main: $(OBJS)
 	g++ $(CPPFLAGS) -o $@ $(OBJS) $(LIBS) $(LDFLAGS)
 
 run: main
-	./main < test.code
+	./main < test.c
+	clang out.ll -o out
+	./out
+
+compare: test.c
+	clang -S -emit-llvm test.c -o test.ll
